added the group's logo, hero's banner and improved on the leaders app appearance

--- a/leaders/templates/leaders/leader_list.html
+++ b/leaders/templates/leaders/leader_list.html
@@ -12,7 +12,7 @@
                 {% endif %}
                 <h2>{{ leader.name }}</h2>
                 <p><strong>Position:</strong> {{ leader.position }}</p>
-                <p><strong>Bio:</strong> {{ leader.bio }}</p>
+              <!--<p><strong>Bio:</strong> {{ leader.bio }}</p> -->
                 <p><strong>Values:</strong> {{ leader.values }}</p>
             </li>
         {% endfor %}
