--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,8 +1,9 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f9;
+   /*background-color: #f4f4f9;*/
+    background: linear-gradient(135deg, #f3f4f6, #d6e0f5);
 }
 
 nav ul {
@@ -28,6 +29,19 @@ img {
     border-radius: 10px; /* Add a modern look */
 }
 
+h2 {
+    color: #ff5733; /* Use your desired color */
+    font-weight: bold;
+    font-family: 'poppins', sans-serif;
+}
+
+h1 {
+    text-align: center;
+    font-size: 24px; /* Adjust size as needed */
+    margin-top: 20px;
+    font-family: 'poppins', sans-serif;
+    font-weight: 600;
+}
 footer {
     text-align: center;
     padding: 10px;
