--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,11 @@
     <!-- Footer Section -->
     <footer>
         <p>© 2025 Youth Connect. All rights reserved.</p>
-        <img id="logo" src="{% static 'images/youth-connect.png' %}" alt="Youth Connect Logo" style="height:50px; width:auto;">
+       <!--<img id="logo" src="{% static 'images/youth-connect.png' %}" alt="Youth Connect Logo" style="height:50px; width:auto;"> -->
+    <div id="logo-container">
+    	<img id="logo" src="{% static 'images/youth-connect.png' %}" alt="Youth Connect Logo" style="height:50px; width:auto;">
+    	<div id="logo-text">United we stand, Divided we fall!</div>
+    </div>
     </footer>
 </body>
 </html>
