--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,7 +14,7 @@
     <!-- Navigation Bar -->
     <nav>
         <ul>
-            <li><a href="/">Home</a></li>
+            <li><a href="/homepage/">Home</a></li>
             <li><a href="/leaders/">Leaders</a></li>
             <li><a href="/resources/">Resources</a></li>
             <li><a href="/news_events/">News & Events</a></li>
