--- a/join/templates/join.html
+++ b/join/templates/join.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block extra_styles %}
+
+{% block styles %}
 <link href="{% static 'css/join.css' %}" rel="stylesheet">
 {% endblock %}
 
