--- a/news_events/templates/news_events.html
+++ b/news_events/templates/news_events.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block extra_styles %}
+
+{% block styles %}
 <link href="{% static 'css/news_events.css' %}" rel="stylesheet">
 {% endblock %}
 
