--- a/resources/templates/resources.html
+++ b/resources/templates/resources.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block extra_styles %}
+
+{% block styles %}
 <link href="{% static 'css/resources.css' %}" rel="stylesheet">
 {% endblock %}
 
