--- a/templates/base.html
+++ b/templates/base.html
@@ -2,13 +2,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %} 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Youth Connect{% endblock %}</title>
-    {% load static %}
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <script src="{% static 'js/script.js' %}"></script>
+   {% block styles %}{% endblock %}
 </head>
 <body>
     <!-- Navigation Bar -->
