--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <title>{% block title %}Youth Connect{% endblock %}</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" href="{% static 'images/youth-connect.png' %}">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <script src="{% static 'js/script.js' %}"></script>
    {% block styles %}{% endblock %}
@@ -25,7 +26,9 @@
             <li><a href="/contact/">Contact Us</a></li>
         </ul>
     </nav>
-
+    <li class="nav-item">
+    <a class="nav-link" href="{% url 'join:register' %}">Register</a>
+   </li>
     <!-- Hero Section -->
     <header>
         <img src="{% static 'images/group2.jpg' %}" alt="Youth Connect Hero Banner" style="width:100%; height:auto;">
