improved on heros section in homepage, added news & events page with responsiveness

--- a/homepage/templates/homepage.html
+++ b/homepage/templates/homepage.html
@@ -107,7 +107,7 @@
     top: 0; left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.4); /* Darkens the background slightly */
+   /* background-color: rgba(0, 0, 0, 0.4); /* Darkens the background slightly */
 }
 
 .vision:hover {
