--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
         <ul class="nav-links" id="navlinks">
             <li><a href="/homepage/">Home</a></li>
             <li><a href="/leaders/">Leaders</a></li>
-            <li><a href="/resources/">Resources</a></li>
+            <li><a href="/resources/">programs & initiatives</a></li>
             <li><a href="/news_events/">News & Events</a></li>
             <li><a href="/about/">About Us</a></li>
             <li><a href="/join/">Join Us</a></li>
