--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,20 @@
    {% block styles %}{% endblock %}
 </head>
 <body>
+    <!--Header section-->
+    <header class="header">
+    <div class="logo">
+        <img src="{% static 'images/youth-connect.png' %}" alt="Youth Con-nect Logo">
+    </div>
+    <div class="title">
+        <h1>Youth Con-nect</h1>
+    </div>
+   <!-- <div class="hamburger">-->
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+    </div>
+</header>
     <!-- Navigation Bar -->
     <nav>
         <div class="hamburger" onclick="toggleMenu()">☰</div>
